<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>2.5.5</version>
        <relativePath/>
    </parent>
    <packaging>pom</packaging>
    <modules>
        <module>example-admin</module>
        <module>example-entity</module>
        <module>example-job</module>
        <module>example-service</module>

        <module>example-dubbo-consumer</module>
        <module>example-dubbo-provider</module>
        <module>example-rocketmq</module>
    </modules>
    <groupId>com.xiushang</groupId>
    <artifactId>xiushang-boot-example</artifactId>
    <version>1.0-SNAPSHOT</version>
    <name>xiushang-boot-example</name>
    <description>xiushang Project For Spring Boot</description>

    <properties>
        <java.version>1.8</java.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>1.8</maven.compiler.source>
        <maven.compiler.target>1.8</maven.compiler.target>
        <xiushang.version>1.4.4</xiushang.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>com.xiushang</groupId>
                <artifactId>example-entity</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.xiushang</groupId>
                <artifactId>example-service</artifactId>
                <version>${project.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>


    <dependencies>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-deploy-plugin</artifactId>
                <version>2.8.2</version>
                <configuration>
                    <skip>true</skip>
                </configuration>
            </plugin>
        </plugins>
    </build>

</project>
